panels in place

--- a/src/culture/index.html
+++ b/src/culture/index.html
@@ -11,10 +11,10 @@ menuorder: 4
   <nav class="home-side-nav">
     <ul class="home-side-nav-list">
       <li><a href="#culture-intro-panel" class="side-nav-link js-goto-panel active" data-no-instant><span class="side-nav-num">one</span><span class="side-nav-circle circle-off"></span></a></li>
-      <li><a href="#culture-freedom-panel" class="side-nav-link js-goto-panel" data-no-instant><span class="side-nav-num num-off">two</span><span class="side-nav-circle"></span></a></li>
-      <li><a href="#culture-community-panel" class="side-nav-link js-goto-panel" data-no-instant><span class="side-nav-num num-off">three</span><span class="side-nav-circle"></span></a></li>
-      <li><a href="#culture-learning-panel" class="side-nav-link js-goto-panel" data-no-instant><span class="side-nav-num num-off">four</span><span class="side-nav-circle"></span></a></li>
-      <li><a href="#culture-value-panel" class="side-nav-link js-goto-panel" data-no-instant><span class="side-nav-num num-off">five</span><span class="side-nav-circle"></span></a></li>
+      <li><a href="#culture-mindset-panel" class="side-nav-link js-goto-panel" data-no-instant><span class="side-nav-num num-off">two</span><span class="side-nav-circle"></span></a></li>
+      <li><a href="#culture-trust-panel" class="side-nav-link js-goto-panel" data-no-instant><span class="side-nav-num num-off">three</span><span class="side-nav-circle"></span></a></li>
+      <li><a href="#culture-teaching-panel" class="side-nav-link js-goto-panel" data-no-instant><span class="side-nav-num num-off">four</span><span class="side-nav-circle"></span></a></li>
+      <li><a href="#culture-geeks-panel" class="side-nav-link js-goto-panel" data-no-instant><span class="side-nav-num num-off">five</span><span class="side-nav-circle"></span></a></li>
     </ul>
   </nav>
 
@@ -48,147 +48,74 @@ menuorder: 4
         <div class="head"><img src="{{ "/img/culture/head-abbie.png" | prepend: site.baseurl }}" alt=""></div>
       </div>
       <div class="heads-left">
-        <div class="head"><img src="{{ "/img/culture/head-richie.png" | prepend: site.baseurl }}" alt=""></div>
+        <div class="head"><img src="{{ "/img/culture/head-natalie-2x.png" | prepend: site.baseurl }}" alt=""></div>
         <div class="head"><img src="{{ "/img/culture/head-abi.png" | prepend: site.baseurl }}" alt=""></div>
       </div>
     </div>
   </section>
 
-  <section id="culture-freedom-panel" class="content-panel">
+  <section id="culture-mindset-panel" class="content-panel">
+    <div class="panel-inner align-left max-1200 clearfix js-fade-in-up">
+      <div class="cols-wrap clearfix">
+        <div class="col col-half left">
+          <div class="image-container">
+            <img src="{{ "/img/culture/go-cart-2x.png" | prepend: site.baseurl }}" alt="Adult and child riding a go-cart" class="jiggle">
+          </div>
+        </div>
+        <div class="col col-half right">
+          <h2 class="underline-orange lowercase">Mindset over skillset</h2>
+          <p>We are meticulous about hiring people with the right mindset. We know that the technical skills and subject matter familiarity can be developed, but the stuff our whanau should have taught us isn't easy to develop later in life. So, we hire and support people who are curious, clever, fun, open, friendly, flexible, accountable, hard-working and community-minded.</p>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section id="culture-trust-panel" class="content-panel">
+    <div class="panel-inner clearfix js-fade-in-up">
+      <div class="trust-mountain-text-container">
+        <div class="trust-mountain-text">
+          <h2 class="underline-orange lowercase">Trust our people</h2>
+          <p>We don't just build the right thing, we build trust too. Honesty, dependability and competence are critical elements of the psychological safety we develop within our company, as well as the partnerships we form with our clients. We operate in an open and accountable manner, admitting when we don't know something, asking for help when we need it, and keeping our commitments with proactive communication.</p>
+        </div>
+      </div>
+      <div class="image-container">
+        <img src="{{ "/img/culture/mountain.svg" | prepend: site.baseurl }}" alt="trust mountain">
+      </div>
+      <div class="trust-mountain-bg-fill">
+        
+      </div>
+    </div>
+  </section>
+
+  <section id="culture-teaching-panel" class="content-panel">
+    <div class="panel-inner max-1200 clearfix js-fade-in-up">
+      <div class="cols-wrap clearfix">
+        <div class="col col-half right">
+          <div class="image-container">
+            <img src="{{ "/img/culture/matts-stack-2x.png" | prepend: site.baseurl }}" alt="Adult and child riding a go-cart" class="jiggle">
+          </div>
+        </div>
+        <div class="col col-half left">
+          <h2 class="underline-orange lowercase">Teaching and learning</h2>
+          <p>We want our team to be the best it can be, always pushing ourselves and challenging each other to lift our game. We have committed training budget for all staff and we use it wisely. We dedicate Thursday lunchtimes to "learning lunches" where we share knowledge on whatever has got someone else excited recently. We value open and honest discussion, asking each other for help and learning from our mistakes as a team.</p>
+        </div>
+      </div>
+
+    </div>
+  </section>
+
+  <section id="culture-geeks-panel" class="content-panel">
     <div class="panel-inner max-1200 clearfix js-fade-in-up">
       <div class="max-1000">
-        <h2 class="underline-orange lowercase">Freedom and accountability</h2>
-        <p>Media Suite is committed to treating its staff as adults. We trust our people to manage their own time and give their best at work, allowing them the freedom to set their own work-life balance. That could mean picking up the kids from school, getting to the gym or undertaking study. We believe you can have your cake and eat it too.</p>
-      </div>
-      <div id="clouds-image">
-        <div id="clouds-svg-wrap" class="svg-container">
-          <svg id="clouds-svg" class="svg-content" version="1.1" viewBox="0 0 879 427" preserveAspectRatio="xMinYMin meet"></svg>
+        <h2 class="underline-orange lowercase">Unashamed geeks</h2>
+        <p>Our minds are our most powerful tools. Software development is an ever changing landscape with new technologies, fads, functionality and pitfalls around every corner. It takes perseverance, curiosity and an astute mind to stay on top of our game and guide our clients toward good decisions. Luckily, Media Suite is full of unashamed geeks who take pride in delivering their best work. We are a team collectively committed to honing our craft.</p>
+        <div class="image-container">
+          <img src="{{ "/img/culture/geeks-24-2x.png" | prepend: site.baseurl }}" alt="geek hands">
         </div>
       </div>
-      <div id="clouds-mobile">
-        <div class="mobile-cloud">
-          <h3 class="lowercase text-orange">Flexibility</h3>
-          <p>&ldquo;I have the flexibility to work wherever and whenever I want as long as I deliver my work. I find that many companies say they are flexible. Media Suite means it.&rdquo; <strong>- Ed</strong></p>
-        </div>
-        <div class="mobile-cloud">
-          <h3 class="lowercase text-orange">Accountability</h3>
-          <p>&ldquo;This isn’t just somewhere we work; it’s something we are all responsible for building. Wherever you fit in, we are relying on your initiative, your creativity and your drive to make it (and us) better at what we do.&rdquo; <strong>- Abi</strong></p>
-        </div>
-        <div class="mobile-cloud">
-          <h3 class="lowercase text-orange">Trust</h3>
-          <p>&ldquo;High performing teams are built on trust – and that trust rests on openness, respect and great communication.  We’re not necessarily looking for the best and brightest individuals – but the kind of people we can trust to bring the right diversity, knowledge and mindset to make our team better (not just bigger)&rdquo; <strong>- Abi</strong></p>
-        </div>
-        <div class="mobile-cloud">
-          <h3 class="lowercase text-orange">Freedom</h3>
-          <p>&ldquo;I get to travel the world and work remotely. That’s pretty rad.&rdquo; <strong>- Patrick (based in Bali)</strong></p>
-        </div>
-      </div>
-    </div>
-    <div id="dude-image">
-      <div id="dude-svg-wrap" class="svg-container">
-        <svg id="dude-svg" class="svg-content" version="1.1" viewBox="0 0 500 345" preserveAspectRatio="xMinYMin meet"></svg>
-      </div>
-    </div>
-  </section>
 
-  <section id="culture-community-panel" class="content-panel">
-    <div class="panel-inner max-1200 clearfix js-fade-in-up">
-      <div id="community-main-text" class="max-760">
-        <h2 class="underline-orange lowercase">People and community</h2>
-        <p>When we say we value our people, we really mean it. We want our people to want to come to work! Happy people are more productive and more likely to bring their A-game to our team. We consider ourselves a part of the wider tech community and our local Ferrymead neighbourhood. We support them both, adding value and facilitating growth wherever we can.</p>
-      </div>
-      <div class="community-text-cols clearfix">
-        <div class="community-text-col">
-          <h3 class="text-orange lowercase">Fun</h3>
-          <p>We have a lot of fun because we don't take things too seriously and we give each other a hard time. Whether it be hacking the office speakers and playing annoying music for a long time, or hacking into someone's computer and turning the screen upside down so they're forced to restart. Having fun and causing mischief keeps us sane.</p>
-          <strong>- Patrick</strong>
-        </div>
-        <div class="community-text-col">
-          <h3 class="text-orange lowercase">Family</h3>
-          <p>Media Suite values and encourages family and life commitments. I work late, either at the office or from home, so that I can have every Wednesday off to be with my kids and enable my wife to work. Spending time with my kids and easing the burden on my family is important. I value the work-life balance.</p>
-          <strong>- Mark</strong>
-        </div>
-        <div class="community-text-col">
-          <h3 class="text-orange lowercase">Community</h3>
-          <p>We like to be involved and help improve the industry. We're active online, feeding back to the open source community. We help organise local events to increase the knowledge share of the tools we work with, and learn from others doing similar things.</p>
-          <strong>- Matt</strong>
-        </div>
-      </div>
     </div>
-    <div id="picnic-images">
-      <svg id="picnic-lady-svg" class="picnic-svg" version="1.1" viewBox="0 0 310 238.5" preserveAspectRatio="xMinYMin meet"></svg>
-      <svg id="picnic-wheel-svg" class="picnic-svg" version="1.1" viewBox="0 0 169.7 396.3" preserveAspectRatio="xMinYMin meet"></svg>
-      <svg id="picnic-blanket-svg" class="picnic-svg" version="1.1" viewBox="0 0 344 167" preserveAspectRatio="xMinYMin meet"></svg>
-      <svg id="picnic-dude-svg" class="picnic-svg" version="1.1" viewBox="0 0 303.6 254.5" preserveAspectRatio="xMinYMin meet"></svg>
-      <svg id="picnic-bbq-svg" class="picnic-svg" version="1.1" viewBox="0 0 478.7 308.4" preserveAspectRatio="xMinYMin meet"></svg>
-      <svg id="picnic-baby-svg" class="picnic-svg" version="1.1" viewBox="0 0 363.5 307.1" preserveAspectRatio="xMinYMin meet"></svg>
-    </div>
-  </section>
-
-  <section id="culture-learning-panel" class="content-panel">
-    <div class="panel-inner max-1200 clearfix js-fade-in-up">
-      <div class="svg-text-overlay">
-        <div class="max-760">
-          <h2 class="underline-orange lowercase">Learning and growth</h2>
-          <p>We want our team to be the best it can be, always pushing ourselves and challenging each other. We have training budget for all staff and we use it! We value open and honest discussion, asking each other for help and learning from our mistakes as a team.</p>
-        </div>
-      </div>
-      <div id="mobile-bulbs" class="clearfix">
-        <div class="mobile-bulb">
-          <div id="help-bulb-svg-wrap" class="svg-container">
-            <svg id="help-bulb-svg" class="svg-content" version="1.1" viewBox="0 0 242.3 241.2" preserveAspectRatio="xMinYMin meet"></svg>
-          </div>
-        </div>
-        <div class="mobile-bulb">
-          <div id="teamwork-bulb-svg-wrap" class="svg-container">
-            <svg id="teamwork-bulb-svg" class="svg-content" version="1.1" viewBox="0 0 234 260.4" preserveAspectRatio="xMinYMin meet"></svg>
-          </div>
-        </div>
-        <div class="mobile-bulb">
-          <div id="improving-bulb-svg-wrap" class="svg-container">
-            <svg id="improving-bulb-svg" class="svg-content" version="1.1" viewBox="0 0 320.7 246.7" preserveAspectRatio="xMinYMin meet"></svg>
-          </div>
-        </div>
-        <div class="mobile-bulb">
-          <div id="passion-bulb-svg-wrap" class="svg-container">
-            <svg id="passion-bulb-svg" class="svg-content" version="1.1" viewBox="0 0 247.7 210.7" preserveAspectRatio="xMinYMin meet"></svg>
-          </div>
-        </div>
-      </div>
-    </div>
-    <div id="desktop-bulbs">
-      <div id="plant-svg-wrap" class="svg-container">
-        <svg id="plant-svg" class="svg-content" version="1.1" viewBox="0 0 1190 776" preserveAspectRatio="xMinYMin meet"></svg>
-      </div>
-    </div>
-  </section>
-
-  <section id="culture-value-panel" class="content-panel">
-    <div class="panel-inner max-1200 clearfix js-fade-in-up">
-      <div class="max-1000">
-        <h2 class="underline-orange lowercase">Value and integrity</h2>
-        <p>We spend a lot of time getting to know our clients so we can deliver the best ideas and cultivate a real partnership. We take on projects we’re passionate about.</p>
-      </div>
-    </div>
-    <div class="mountain-text-wrap clearfix">
-      <div id="mountain-text-1" class="mountain-text">
-        <h3 class="text-orange lowercase">Adding value</h3>
-        <p>We challenge the client's ideas and try to understand what the client needs, we push back on ideas that we don't think will add value for our clients. <strong>- George</strong></p>
-      </div>
-      <div id="mountain-text-2" class="mountain-text">
-        <h3 class="text-orange lowercase">Engagement</h3>
-        <p>As we get more and more interesting projects, people are really engaging with them by recognising their contribution towards the project and delivering quality work to make it a success. <strong>- Andrew</strong></p>
-      </div>
-      <div id="mountain-text-3" class="mountain-text">
-        <h3 class="text-orange lowercase">Partnership</h3>
-        <p>We treat working with our clients as a partnership, we are open, honest and act in their best interests. <strong>- Pete</strong></p>
-      </div>
-    </div>
-    <div id="mountain-image">
-      <div id="mountain-svg-wrap" class="svg-container">
-        <svg id="mountain-svg" class="svg-content" version="1.1" viewBox="0 0 1188.2 699.9" preserveAspectRatio="xMinYMin meet"></svg>
-      </div>
-    </div>
+    
   </section>
 
 </div>
