Culture page release candidate

--- a/src/culture/index.html
+++ b/src/culture/index.html
@@ -72,17 +72,17 @@ menuorder: 4
 
   <section id="culture-trust-panel" class="content-panel">
     <div class="panel-inner clearfix js-fade-in-up">
+      <div class="image-container">
+        <img src="{{ "/img/culture/mountain-flat.svg" | prepend: site.baseurl }}" alt="trust mountain">
+      </div>
       <div class="trust-mountain-text-container">
-        <div class="trust-mountain-text">
+        <div class="trust-mountain-text max-760">
           <h2 class="underline-orange lowercase">Trust our people</h2>
           <p>We don't just build the right thing, we build trust too. Honesty, dependability and competence are critical elements of the psychological safety we develop within our company, as well as the partnerships we form with our clients. We operate in an open and accountable manner, admitting when we don't know something, asking for help when we need it, and keeping our commitments with proactive communication.</p>
         </div>
       </div>
-      <div class="image-container">
-        <img src="{{ "/img/culture/mountain.svg" | prepend: site.baseurl }}" alt="trust mountain">
-      </div>
-      <div class="trust-mountain-bg-fill">
-        
+      <div class="mountain-bottom">
+        <!-- container for sloped bottom image -->
       </div>
     </div>
   </section>
@@ -105,17 +105,15 @@ menuorder: 4
   </section>
 
   <section id="culture-geeks-panel" class="content-panel">
-    <div class="panel-inner max-1200 clearfix js-fade-in-up">
-      <div class="max-1000">
+    <div class="panel-inner max-760 clearfix js-fade-in-up">
         <h2 class="underline-orange lowercase">Unashamed geeks</h2>
         <p>Our minds are our most powerful tools. Software development is an ever changing landscape with new technologies, fads, functionality and pitfalls around every corner. It takes perseverance, curiosity and an astute mind to stay on top of our game and guide our clients toward good decisions. Luckily, Media Suite is full of unashamed geeks who take pride in delivering their best work. We are a team collectively committed to honing our craft.</p>
-        <div class="image-container">
-          <img src="{{ "/img/culture/geeks-24-2x.png" | prepend: site.baseurl }}" alt="geek hands">
-        </div>
-      </div>
-
     </div>
-    
+    <div class="geek-hands">
+      <div class="image-container">
+        <img src="{{ "/img/culture/geeks-24-2x.png" | prepend: site.baseurl }}" alt="geek hands">
+      </div>
+    </div>
   </section>
-
 </div>
+<!-- geek hands -->
