--- a/src/culture/index.html
+++ b/src/culture/index.html
@@ -20,8 +20,8 @@ menuorder: 4
 
   <section id="culture-intro-panel" class="first-panel grey-panel">
     <div class="panel-inner max-1000">
-      <div class="max-620 clearfix">
-        <h1 class="lowercase underline-orange text-size-55 kern-2">Building the right culture</h1>
+      <div class="max-610-1000-responsive clearfix">
+        <h1 class="lowercase underline-orange text-size-55 kern-2-768-1400">Building the right culture</h1>
         <p class="fancy-pants-font text-size-27">It takes the right people to build the right thing.</p>
         <p>We want our people to enjoy their work! Happy people are more productive and more likely to bring their A-game. So we do everything we can to build a healthy happy company culture. Although culture can’t be manufactured, it can be fostered.</p>
         <p>We live by our values and structure our company accordingly, so our people enjoy coming to work and giving their best for the team. Media Suite’s culture is a collection of attitudes, beliefs, skills and tools that all work together around our central purpose - building the right thing. </p>
