Tidied CSS, removed empty rules, class names more descriptive

--- a/src/culture/index.html
+++ b/src/culture/index.html
@@ -52,12 +52,12 @@ menuorder: 4
   <section id="culture-mindset-panel" class="content-panel">
     <div class="panel-inner align-left max-1200 clearfix js-fade-in-up">
       <div class="cols-wrap clearfix">
-        <div class="col col-half left">
+        <div class="col col-half pull-left">
           <div class="image-container">
             <img src="{{ "/img/culture/go-cart-2x.png" | prepend: site.baseurl }}" alt="Adult and child riding a go-cart" class="jiggle">
           </div>
         </div>
-        <div class="col col-half right">
+        <div class="col col-half pull-right">
           <h2 class="underline-orange lowercase">Mindset over skillset</h2>
           <p>We are meticulous about hiring people with the right mindset. We know that the technical skills and subject matter familiarity can be developed, but the stuff our whanau should have taught us isn't easy to develop later in life. So, we hire and support people who are curious, clever, fun, open, friendly, flexible, accountable, hard-working and community-minded.</p>
         </div>
@@ -85,12 +85,12 @@ menuorder: 4
   <section id="culture-teaching-panel" class="content-panel">
     <div class="panel-inner max-1200 clearfix js-fade-in-up">
       <div class="cols-wrap clearfix">
-        <div class="col col-half right">
+        <div class="col col-half pull-right">
           <div class="image-container">
             <img src="{{ "/img/culture/matts-stack-2x.png" | prepend: site.baseurl }}" alt="Adult and child riding a go-cart" class="jiggle">
           </div>
         </div>
-        <div class="col col-half left">
+        <div class="col col-half pull-left">
           <h2 class="underline-orange lowercase">Teaching and learning</h2>
           <p>We want our team to be the best it can be, always pushing ourselves and challenging each other to lift our game. We have committed training budget for all staff and we use it wisely. We dedicate Thursday lunchtimes to "learning lunches" where we share knowledge on whatever has got someone else excited recently. We value open and honest discussion, asking each other for help and learning from our mistakes as a team.</p>
         </div>
