Add James and greta, change Julia's last name, tweak Matisse width css on v.small screens

--- a/src/people/index.html
+++ b/src/people/index.html
@@ -390,7 +390,79 @@ menuorder: 4
       </div>
       <!-- .person-wrap -->
 
-      <!-- James -->
+      <!-- Greta -->
+      <div id="person-greta" class="person-wrap js-iso-element">
+        <a href="#" class="person js-show-bio">
+          <div class="loader icon-spin1"></div>
+          <img class="person-image" src="{{ "/img/people/greta.png" | prepend: site.baseurl }}" alt="Greta" />
+          <span class="burst-wrap scale-in">
+            <span class="burst-text fancy-pants-font lowercase">Bio</span>
+            <img class="burst bio-rotate" src="{{ "/img/people/starburst.png" | prepend: site.baseurl }}" alt="" />
+            <img class="burst-shadow bio-rotate" src="{{ "/img/people/starburst-shadow.png" | prepend: site.baseurl }}" alt="" />
+          </span>
+        </a>
+        <div class="bio-wrap">
+          <div class="bio-inner">
+            <div class="faux-table">
+              <div class="faux-table-cell">
+                <div class="bio-head">
+                  <h2 class="bio-heading">Greta</h2>
+                  <h3 class="bio-sub">Project Lead / Product Owner</h3>
+                  <div class="js-image-fill bio-real-image">
+                    <img src="{{ "/img/people/real-greta.jpg" | prepend: site.baseurl }}" alt="Greta" />
+                  </div>
+                </div>
+                <div class="bio-body">
+                  <p>Greta has more than 12 years experience in digital marketing, strategy, content and product development. She’s worked for small business, enterprise, and government, both here at home and further afield. Connecting people with digital experiences really floats her boat. When she’s not problem-solving at work, you’ll find her being a mum to the lovely B, drawing, walking, or getting her caffeine fix.</p>
+                  <div class="fancy-pants-font js-blog-link" data-blog-link="/author/greta"></div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-- .bio-inner -->
+        </div>
+        <!-- .bio-wrap -->
+        <h3 class="person-name-hover">Greta</h3>
+      </div>
+      <!-- .person-wrap -->
+
+      <!-- James B -->
+      <div id="person-james-brown" class="person-wrap js-iso-element">
+        <a href="#" class="person js-show-bio">
+          <div class="loader icon-spin1"></div>
+          <img class="person-image" src="{{ "/img/people/james-brown.png" | prepend: site.baseurl }}" alt="James Brown" />
+          <span class="burst-wrap scale-in">
+            <span class="burst-text fancy-pants-font lowercase">Bio</span>
+            <img class="burst bio-rotate" src="{{ "/img/people/starburst.png" | prepend: site.baseurl }}" alt="" />
+            <img class="burst-shadow bio-rotate" src="{{ "/img/people/starburst-shadow.png" | prepend: site.baseurl }}" alt="" />
+          </span>
+        </a>
+        <div class="bio-wrap">
+          <div class="bio-inner">
+            <div class="faux-table">
+              <div class="faux-table-cell">
+                <div class="bio-head">
+                  <h2 class="bio-heading">James Brown</h2>
+                  <h3 class="bio-sub">Full Stack Developer</h3>
+                  <div class="js-image-fill bio-real-image">
+                    <img src="{{ "/img/people/real-james-brown.jpg" | prepend: site.baseurl }}" alt="James Pearson" />
+                  </div>
+                </div>
+                <div class="bio-body">
+                  <p>Avid scenic driver, craft beer drinker and casual ball player, James is a grad from the Enspiral dev academy in Wellington. He studied in 2016 and has been developing his skills in Web Development ever since. A Pom at heart (and genetically), James enjoys a good cup of “Yorkshire” tea, Dominos pizza (the UK version), and New Zealand’s lack of rain and cloud.</p>
+                  <div class="fancy-pants-font js-blog-link" data-blog-link="/author/jamesb"></div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-- .bio-inner -->
+        </div>
+        <!-- .bio-wrap -->
+        <h3 class="person-name-hover">James B</h3>
+      </div>
+      <!-- .person-wrap -->
+
+      <!-- James P-->
       <div id="person-james" class="person-wrap js-iso-element">
         <a href="#" class="person js-show-bio">
           <div class="loader icon-spin1"></div>
@@ -432,7 +504,7 @@ menuorder: 4
           <!-- .bio-inner -->
         </div>
         <!-- .bio-wrap -->
-        <h3 class="person-name-hover">James</h3>
+        <h3 class="person-name-hover">James P</h3>
       </div>
       <!-- .person-wrap -->
 
@@ -562,7 +634,7 @@ menuorder: 4
       <div id="person-julia" class="person-wrap js-iso-element">
         <a href="#" class="person js-show-bio">
           <div class="loader icon-spin1"></div>
-          <img class="person-image" src="{{ "/img/people/julia.png " | prepend: site.baseurl }}" alt="Julia Hide" />
+          <img class="person-image" src="{{ "/img/people/julia.png " | prepend: site.baseurl }}" alt="Julia Tokumaru" />
           <span class="burst-wrap scale-in">
             <span class="burst-text fancy-pants-font lowercase">Bio</span>
             <img class="burst bio-rotate" src="{{ "/img/people/starburst.png " | prepend: site.baseurl }}" alt="" />
@@ -574,7 +646,7 @@ menuorder: 4
             <div class="faux-table">
               <div class="faux-table-cell">
                 <div class="bio-head">
-                  <h2 class="bio-heading">Julia Hide</h2>
+                  <h2 class="bio-heading">Julia Tokumaru</h2>
                   <h3 class="bio-sub">Front-end Developer</h3>
                   <span class="linkedin-container">
                     <a href="https://www.linkedin.com/in/julia-hide-b25b6349/" class="linkedin-link" target="_blank">
@@ -582,13 +654,11 @@ menuorder: 4
                     </a>
                   </span>
                   <div class="js-image-fill bio-real-image">
-                    <img src="{{ "/img/people/real-julia.jpg" | prepend: site.baseurl }}" alt="Julia Hide" />
+                    <img src="{{ "/img/people/real-julia.jpg" | prepend: site.baseurl }}" alt="Julia Tokumaru" />
                   </div>
                 </div>
                 <div class="bio-body">
-                  <p>Julia is a pixel perfectionist and cat fangirl. Having got most her way through a BSc in Computer Science
-                    she discovered her passion for the browser and hasn’t looked back. She is passionate about interaction
-                    design which brings practicality and flare to her work.</p>
+                  <p>Julia is a pixel perfectionist and cat fangirl. Having got most her way through a BSc in Computer Science she discovered her passion for the browser and hasn’t looked back. She is passionate about interaction design which brings practicality and flare to her work.</p>
                   <div class="fancy-pants-font js-blog-link" data-blog-link="/author/julia"></div>
                 </div>
               </div>
