Hotfix for incorrect blog URLs

--- a/src/people/index.html
+++ b/src/people/index.html
@@ -450,7 +450,7 @@ menuorder: 4
                 </div>
                 <div class="bio-body">
                   <p>Avid scenic driver, craft beer drinker and casual ball player, James is a grad from the Enspiral dev academy in Wellington. He studied in 2016 and has been developing his skills in Web Development ever since. A Pom at heart (and genetically), James enjoys a good cup of “Yorkshire” tea, Dominos pizza (the UK version), and New Zealand’s lack of rain and cloud.</p>
-                  <div class="fancy-pants-font js-blog-link" data-blog-link="/author/jamesb"></div>
+                  <div class="fancy-pants-font js-blog-link" data-blog-link="/author/james-the-intern"></div>
                 </div>
               </div>
             </div>
