Hotfix for missing Greta's last name

--- a/src/people/index.html
+++ b/src/people/index.html
@@ -406,7 +406,7 @@ menuorder: 4
             <div class="faux-table">
               <div class="faux-table-cell">
                 <div class="bio-head">
-                  <h2 class="bio-heading">Greta</h2>
+                  <h2 class="bio-heading">Greta Simpson</h2>
                   <h3 class="bio-sub">Project Lead / Product Owner</h3>
                   <div class="js-image-fill bio-real-image">
                     <img src="{{ "/img/people/real-greta.jpg" | prepend: site.baseurl }}" alt="Greta" />
