Add new staff members to people page, remove unused assets

--- a/src/index.html
+++ b/src/index.html
@@ -208,7 +208,7 @@ ishome: true
                 <h3 class="circle-main-hd lowercase fancy-pants-font">Christchurch</h3>
                 <h4 class="circle-sub-hd lowercase">New Zealand</h4>
                 <a href="{{ "/say-hello" | prepend: site.baseurl }}" class="js-image-fill">
-                  <img class="circle-link-image" src="{{ "/img/hello-chch-3.jpg" | prepend: site.baseurl }}" alt="Media Suite office in Christchurch, New Zealand" />
+                  <img class="circle-link-image" src="{{ "/img/hello-chch.jpg" | prepend: site.baseurl }}" alt="Media Suite office in Christchurch, New Zealand" />
                 </a>
               </div>
               <p class="text-black"><a href="mailto:hello@mediasuite.co.nz">hello@mediasuite.co.nz</a><br/>
