Update Kaylene and Al's role titles

--- a/src/people/index.html
+++ b/src/people/index.html
@@ -111,7 +111,7 @@ menuorder: 4
               <div class="faux-table-cell">
                 <div class="bio-head">
                   <h2 class="bio-heading">Al Duncan</h2>
-                  <h3 class="bio-sub">Product Owner</h3>
+                  <h3 class="bio-sub">Product Manager</h3>
                   <div class="js-image-fill bio-real-image">
                     <img src="{{ "/img/people/real-al.jpg" | prepend: site.baseurl }}" alt="Al Duncan" />
                   </div>
@@ -788,7 +788,7 @@ menuorder: 4
               <div class="faux-table-cell">
                 <div class="bio-head">
                   <h2 class="bio-heading">Kaylene Wakefield</h2>
-                  <h3 class="bio-sub">Project Manager</h3>
+                  <h3 class="bio-sub">Business Analyst and Agile Lead</h3>
                   <div class="js-image-fill bio-real-image">
                     <img src="{{ "/img/people/real-kaylene.jpg" | prepend: site.baseurl }}" alt="Julia Tokumaru" />
                   </div>
