Update Steve and Stu's role titles

--- a/src/people/index.html
+++ b/src/people/index.html
@@ -1099,7 +1099,7 @@ menuorder: 4
               <div class="faux-table-cell">
                 <div class="bio-head">
                   <h2 class="bio-heading">Steve Liew</h2>
-                  <h3 class="bio-sub">Full Stack Developer</h3>
+                  <h3 class="bio-sub">Support and Testing Manager</h3>
                   <span class="linkedin-container">
                     <a href="http://www.linkedin.com/in/steveliew/" class="linkedin-link" target="_blank">
                       <img src="{{ "/img/linkedin-logo.png " | prepend: site.baseurl }}" alt="Linkedin logo" class="linkedin-img">
@@ -1143,7 +1143,7 @@ menuorder: 4
               <div class="faux-table-cell">
                 <div class="bio-head">
                   <h2 class="bio-heading">Stu Craig</h2>
-                  <h3 class="bio-sub">Software Developer</h3>
+                  <h3 class="bio-sub">Database Architect</h3>
                   <div class="js-image-fill bio-real-image">
                     <img src="{{ "/img/people/real-stu.jpg" | prepend: site.baseurl }}" alt="Stu Craig" />
                   </div>
