Add Resource Consenting and eWater case studies

--- a/src/case-studies/index.html
+++ b/src/case-studies/index.html
@@ -11,6 +11,44 @@ menuorder: 2
 
     <div class="case-study-items">
 
+      <div id="csi-ewater" class="case-study-item clearfix">
+        <a href="{{ "/case-studies/ewater" | prepend: site.baseurl }}" class="item-image">
+          <img src="{{ "/img/case-studies/cs-item-ewater.png" | prepend: site.baseurl }}" alt="" class="jiggle" />
+        </a>
+        <div class="item-text">
+          <div class="item-text-head">
+            <h2 class="item-main-heading"><a class="text-sheen" href="{{ "/case-studies/ewater" | prepend: site.baseurl }}">eWater</a></h2>
+            <h3 class="item-sub-heading"><a href="{{ "/case-studies/ewater" | prepend: site.baseurl }}">Marlborough District Council</a></h3>
+          </div>
+          <div class="item-text-body">
+            <div class="item-icons">
+              <i class="icon icon-cog tip"></i>
+            </div>
+            <p>eWater puts ownership and accountability for regional water use into the hands of the Marlborough people. The system provides high level functionality for both council officers and water users, while allowing the region to maximise its resources.</p>
+            <a href="{{ "/case-studies/ewater" | prepend: site.baseurl }}" class="drop-btn orange-bg small-btn">More on this&hellip;</a>
+          </div>
+        </div> <!--.item-text -->
+      </div>  <!-- .case-study-item -->
+
+      <div class="case-study-item clearfix">
+        <a href="{{ "/case-studies/resource-consenting" | prepend: site.baseurl }}" class="item-image">
+          <img src="{{ "/img/case-studies/cs-item-resource-consenting.png" | prepend: site.baseurl }}" alt="" class="jiggle" />
+        </a>
+        <div class="item-text">
+          <div class="item-text-head">
+            <h2 class="item-main-heading"><a class="text-sheen" href="{{ "/case-studies/resource-consenting" | prepend: site.baseurl }}">Resource Consenting</a></h2>
+            <h3 class="item-sub-heading"><a href="{{ "/case-studies/resource-consenting" | prepend: site.baseurl }}">Marlborough District Council</a></h3>
+          </div>
+          <div class="item-text-body">
+            <div class="item-icons">
+              <i class="icon icon-cog tip"></i>
+            </div>
+            <p>Media Suite and Marlborough District Council partnered to change the way Resource Consents are applied for and processed. The Resource Consenting system solves a number of process headaches for both council and applicant, but provides real value in improving the quality of collected data for decision makers.</p>
+            <a href="{{ "/case-studies/resource-consenting" | prepend: site.baseurl }}" class="drop-btn orange-bg small-btn">More on this&hellip;</a>
+          </div>
+        </div> <!--.item-text -->
+      </div>  <!-- .case-study-item -->
+
       <div id="csi-cruisy" class="case-study-item clearfix">
         <a href="{{ "/case-studies/marlborough-cruise-guide" | prepend: site.baseurl }}" class="item-image">
           <img src="{{ "/img/case-studies/cs-item-cruise-guide.jpg" | prepend: site.baseurl }}" alt="" class="jiggle" />
