Fix Resource Consents PDF

--- a/src/case-studies/resource-consenting/index.html
+++ b/src/case-studies/resource-consenting/index.html
@@ -42,7 +42,7 @@ casestudyid: 6
 
       <img src="{{ "/img/case-studies/resc-2.png" | prepend: site.baseurl }}" alt="RMA legislation infographic" class="case-study-image image-max-100 space-below-please" />
       <div class="align-center">
-        <a href="/case-studies/resource-consenting/RMA-legislation-diagram.pdf" target="_blank" class="drop-btn orange-bg">Download PDF</a>
+        <a href="{{ "/img/pdfs/RMA-legislation-diagram.pdf" | prepend: site.baseurl }}" target="_blank" class="drop-btn orange-bg">Download PDF</a>
       </div>
 
       <h2 class="lowercase">Creating Solutions</h2>
