Add image to eWater case study

--- a/src/case-studies/ewater/index.html
+++ b/src/case-studies/ewater/index.html
@@ -36,6 +36,7 @@ casestudyid: 5
       <p>The transparency of the system means permit holders and members of the public across the region have the tools to manage water use amongst themselves, with less need for council involvement.</p>
 
       <h2 class="lowercase">How it works</h2>
+      <img src="{{ "/img/case-studies/ewater-2.jpg" | prepend: site.baseurl }}" alt="eWater on Android" class="case-study-image-right" />
       <p>eWater improves systems at two levels. In a purely functional sense, it provides better water use information for current permit holders and council officers. At a higher level, it allows the people of Marlborough to take ownership of their water.</p>
       <p>Accountability for, and ownership of water use across the region means huge progress can be made, both economically and environmentally. eWater provides the tools for this change to occur.</p>
       <p>Using the eWater system, anyone can view the current use and allocation of a particular permit. Thanks to council-mandated conditions on more recent water permits, a user’s Take and Use are now both digitally measured and reflected in eWater in real time. With transparency over how much water is allocated and used by any permit holder, water users can begin to effect change, without the need for council involvement.</p>
